# zoc_ai

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .replit  .zoc_versions.txt  CHANGELOG.md  Cargo.toml  LICENSE  MONOREPO_ARCHITECTURE.md  Makefile  README.md  REPLIT_AGENT_WORKFLOW_IMPLEMENTATION.md  Text File.txt  agent-panel-visual-feedback-redesign-prompt.md  agent.me  develop.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  zocai.me
apps/desktop/: Cargo.toml  README.md  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: checks.rs  fs_commands.rs  git.rs  lib.rs  llama_server.rs  main.rs  patch.rs  search_commands.rs  secrets.rs  sidecar.rs  workspace.rs
crates/hardware-probe/: Cargo.toml
crates/hardware-probe/src/: lib.rs
crates/hotpath/: Cargo.toml  README.md
crates/hotpath/src/: chunker.rs  fs_watch.rs  indexer.rs  lib.rs  patch.rs  pty.rs  search.rs
python/zocai_evolution/: README.md  pyproject.toml
python/zocai_evolution/src/zocai_evolution/: __init__.py  capture.py  distillation.py  engine.py  models.py  weight_bus.py
python/zocai_evolution/tests/: test_distillation_gate_property.py  test_engine.py  test_isolated_recording_failure_property.py  test_property_45_verified_trajectory_recording.py  test_property_47_failing_recorder_blocks_distillation.py
python/zocai_migration/: README.md  pyproject.toml
python/zocai_migration/src/zocai_migration/: __init__.py  __main__.py  cli.py  controller.py  git_vcs.py  guard.py
python/zocai_migration/tests/: test_branch_halt_properties.py  test_cli.py  test_controller.py  test_guard.py  test_integration_per_stage_real_builds.py  test_integration_preservation_branch_vcs.py  test_property_53_build_failure_halt.py  test_property_committed_branch_precondition.py  test_property_guard_delete_gate.py  test_property_replace_before_delete.py  test_shared_config_retention_property.py  test_smoke_three_language_deliverables.py
services/agent/: README.md  pyproject.toml
services/agent/src/llama_studio_agent/: __init__.py  app.py  approvals.py  config.py  deps.py  hotpath.py  permissions.py  reconcile.py  runs.py  state.py
services/agent/src/llama_studio_agent/agent/: __init__.py  checkpoints.py  context_search.py  memory.py  orchestrator.py  planner.py  project_rules.py  recall.py  replit_workflow.py  summariser.py  validation.py  workspace_diff.py  zoc_run.py
services/agent/src/llama_studio_agent/commands/: __init__.py  recipes.py  registry.py
services/agent/src/llama_studio_agent/events/: __init__.py  bus.py
services/agent/src/llama_studio_agent/indexer/: __init__.py  embeddings.py  service.py  store.py
services/agent/src/llama_studio_agent/modes/: __init__.py  code_review.py  inline_edit.py  terminal.py  test_gen.py
services/agent/src/llama_studio_agent/persistence/: __init__.py  db.py  repository.py
services/agent/src/llama_studio_agent/providers/: __init__.py  anthropic.py  base.py  gemini.py  llamacpp.py  mock.py  openai.py  registry.py
services/agent/src/llama_studio_agent/scripts/: launch.py
services/agent/src/llama_studio_agent/tools/: __init__.py  ast.py  base.py  filesystem.py  index.py  registry.py  sandbox.py  search.py  shell.py  workspace.py
services/agent/src/llama_studio_agent/v1/: agent_run.py  commands.py  context.py  (+13 more)
services/agent/tests/: conftest.py  test_byo_provider.py  test_checkpoints.py  test_commands.py  test_context_search.py  test_event_envelope_run_id.py  test_fuzzy_patch.py  test_health.py  test_index_config_route.py  test_indexer.py  test_inline_edit.py  test_modes.py  test_orchestrator.py  test_orchestrator_approval.py  test_orchestrator_approval_recovery.py  test_permissions.py  test_persistence.py  test_persistence_resume.py  test_phase_e_coverage.py  test_project_rules.py  test_providers.py  test_recall_edges.py  test_recall_properties.py  test_replit_workflow.py  test_run_id.py  test_run_registry.py  test_sandbox.py  test_settings_route.py  test_terminal_routes.py  test_tools.py  test_v1_routes.py  test_watcher_reconcile.py  test_zoc_run.py
services/agent/tests/smoke/: conftest.py  test_local_llm_smoke.py
services/gateway/: README.md  pyproject.toml
services/gateway/src/zocai_gateway/: __init__.py  app.py  auth.py  benchmark.py  channel.py  context_mentions.py  edits.py  emit_gate.py  event_bus.py  fsm.py  hardware_probe.py  hot_swap.py  intent_event.py  mode_router.py  model_allocator.py  model_interface.py  model_runtime.py  orchestrator.py  plan.py  project_tests.py  react.py  remediation.py  run_pipeline.py  settings.py  stages.py  toolsets.py  verification.py  workspace_index.py
services/gateway/tests/: test_advanced_context_contract_parity.py  test_advanced_ranking_property.py  test_agent_plan_schema_property.py  test_agent_structured_only_property.py  test_agent_trace_events.py  test_app_endpoints.py  test_app_integration.py  test_apply_exact_plan_property.py  test_apply_failure_retention_property.py  test_ask_first_chunk_timing.py  test_ask_path.py  test_ask_read_only_property.py  test_ask_streaming_example.py  test_ask_text_only_suppression_property.py  test_budget_ceiling_pause_property.py  test_budget_counter_correctness_property.py  test_budget_emit_seq_property.py  test_channel.py  test_completions_admission_property.py  test_completions_cache_property.py  test_completions_endpoint.py  test_completions_prompts_property.py  test_completions_stop_forwarding.py  test_completions_stream_property.py  test_completions_validation_property.py  test_context_compression.py  test_context_compression_property.py  test_context_mentions.py  test_contract_conformance_discriminator_property.py  test_diary_worker.py  test_disk_failure_memory_fallback_property.py  test_done_close_and_agent_toolset_example.py  test_done_terminal_close.py  test_edits.py  test_emit_gate.py  test_emit_gate_advanced_context_property.py  test_empty_plan_skip_property.py  test_end_to_end_emission_ordering_property.py  test_execute_run_wiring.py  test_failed_load_retain_pause_property.py  (+89 more)
(+432 files in other folders)
