[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "crates/hotpath",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
repository = "https://github.com/llama-studio/llama-studio"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.40", features = ["full"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "unwind"
