[project]
name = "zoc-studio-workspace"
version = "2.0.0"
description = "Workspace root for Zoc AI Python packages."
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["services/gateway", "packages/shared-types/python", "python/zocai_evolution"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501: line length handled by formatter.
# B008: FastAPI's `Depends()`/`Query()` in argument defaults is the idiomatic,
#       documented pattern — not a real mutable-default bug.
# RUF002: ambiguous-unicode in docstrings (en-dashes/arrows) is intentional prose.
# UP042: `class X(str, Enum)` is valid and used for Pydantic compatibility.
ignore = ["E501", "B008", "RUF002", "UP042"]

[tool.ruff.lint.per-file-ignores]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["legacy/"]

[tool.pytest.ini_options]
testpaths = ["services/gateway/tests"]
addopts = "-q"
