[package]
name = "llama-studio-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tauri v2 shell for Llama Studio."
default-run = "llama-studio"

[lib]
name = "llama_studio_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "llama-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
once_cell = "1"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
keyring = "3"
notify = "6"
notify-debouncer-mini = "0.4"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
similar = "2"
llama-studio-hotpath = { path = "../../crates/hotpath" }
