[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llama-studio-agent"
version = "2.0.0"
description = "FastAPI agent service for Zoc AI (sidecar)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
    "httpx>=0.27",
    "anyio>=4.6",
    "sse-starlette>=2.1",
    "llama-studio-shared-schema",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[project.scripts]
llama-studio-agent = "llama_studio_agent.scripts.launch:main"

[tool.uv.sources]
llama-studio-shared-schema = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/llama_studio_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/llama_studio_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Smoke tests against real local LLMs are opt-in. They live under
# ``tests/smoke`` and are skipped by default collection so ``pytest`` and
# ``make check`` stay fast and deterministic. Run them explicitly with:
#   LLAMA_STUDIO_SMOKE=1 pytest tests/smoke
norecursedirs = ["smoke"]
markers = [
    "smoke: end-to-end tests against a real local LLM (opt-in)",
]
