[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zocai-gateway"
version = "0.1.0"
description = "FastAPI streaming gateway sidecar for the Zoc AI Ecosystem (Layer 2)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zocai_gateway"]

[tool.hatch.build.targets.sdist]
include = ["src/zocai_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
