[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "zocai-gateway"
version = "2.0.0"
description = "FastAPI streaming gateway sidecar for the Zoc AI Ecosystem (Layer 2)."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "zoc-studio-shared-schema",
    "zocai-evolution",
]

# These two are sibling packages in the uv workspace. The gateway imports
# `shared_schema.*` and `zocai_evolution.*` at runtime, so they must be
# declared dependencies (resolved from the workspace, not PyPI).
[tool.uv.sources]
zoc-studio-shared-schema = { workspace = true }
zocai-evolution = { workspace = true }

[project.optional-dependencies]
embeddings = [
    "fastembed>=0.3",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zocai_gateway"]

[tool.hatch.build.targets.sdist]
include = ["src/zocai_gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
